c/examples/writing-a-c-compiler-tests/tests/chapter_14/invalid_types/extra_credit/compound_assign_thru_ptr_not_lval.c
// The result of a compound assignment expression through a pointer isn't an
// lvalue, so you can't take its address with &
int main(void) {
    int i = 100;
    int *ptr = &i;
    int *ptr2 = &(*ptr -= 10);
    return 0;
}